# rviz_talking_view_controller

./: CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/rviz_talking_view_controller/: rviz_talking_view_controller.h
launch/: demo.launch
msg/: CLIEngine.msg
src/: rviz_talking_view_controller.cpp
