<package>
  <name>rviz_talking_view_controller</name>
  <version>0.1.1</version>
  <description>Rviz controller that publishes the current viewpoint as ROS message.</description>
  <author email="avempati@ethz.ch">Anurag Vempati</author>
  <maintainer email="avempati@ethz.ch">Anurag Vempati</maintainer>

  <license>ASL</license>
  <url type="repository">https://github.com/vanurag/rviz_talking_view_controller</url>
  <url type="bugtracker">https://github.com/vanurag/rviz_talking_view_controller/issues</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
